# BabelGrid

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.md  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
babelgrid/: __init__.py  babelgrid.py  quadtree.py  s2.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: example_geojson.json  grids_area_reference.csv  readme.ipynb
s2/: s2.py
s2_py/: __init__.py  cli.py
tests/: __init__.py  test_s2.py  test_s2_py.py
tests/test_data/: polyfill_tests.yaml
