[tool.poetry]
authors = ["Joao Carabetta <joao.carabetta@gmail.com>"]
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A common python API to work with different established grid systems."
homepage = "https://github.com/EL-BID/BabelGrid"
license = "AM-331-A3 Licencia de Software"
name = "babelgrid"
readme = "README.md"
repository = "https://github.com/EL-BID/BabelGrid"
version = "0.1.0"

[tool.poetry.dependencies]
h3 = '3.6.3'
pygeotile = "*"
python = "^3.7"
s2sphere = '0.2.5'
shapely = '1.7.0'

[tool.poetry.dev-dependencies]
h3 = '3.6.3'
pygeotile = "*"
python = "^3.7"
s2sphere = '0.2.5'
shapely = '1.7.0'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.black]
# Use the more relaxed max line length permitted in PEP8.
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \venv
  | build
  | dist
  | htmlcov
)/
'''
line-length = 88
target-version = ["py36", "py37", "py38"]
